--- a/src/components/homepage/HubCards.css
+++ b/src/components/homepage/HubCards.css
@@ -18,6 +18,7 @@
   border-radius: 4px;
   border: solid 1px var(--ifm-color-emphasis-200);
   background-color: var(--ifm-card-background-color);
+  text-decoration: none;
 }
 
 .Hub-Placeholder {
@@ -60,9 +61,10 @@
   justify-content: space-between;
   align-items: center;
   padding: -5px;
+  text-decoration: none;
 }
 
-button {
+.hub-card-button {
   width: 100%;
   padding: 10px;
   font-family: "Plus Jakarta Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -72,18 +74,28 @@ button {
   border: 1px solid var(--ifm-color-emphasis-200);
   text-align: left;
   cursor: pointer;
-  margin-bottom: 2px; /* Reduced gap */
+  margin-bottom: 2px; 
+  text-decoration: none;
 }
 
-button.AdditionalButton {
+.hub-card-button.AdditionalButton {
   margin-top: 2px; /* Reduced gap */
+  text-decoration: none;
 }
 
-button.ViewMoreButton {
+.hub-card-button:hover {
+  text-decoration: none; /* Remove underline on hover */
+}
+
+.ViewMoreButton {
   background-color: transparent; /* No fill */
   border: none; /* No border */
-  color: var(--ifm-link-color);
-  text-decoration: underline; /* Style as a link */
+  font-size: 10px;
+  text-decoration: none; /* Remove underline */
+}
+
+.ViewMoreButton:hover {
+  text-decoration: none; /* Remove underline on hover */
 }
 
 .Coming-Soon {
